--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -48,7 +48,7 @@
                 <a href=""> <i class="fa-brands fa-tiktok"></i></a>
                 <a href="https://www.instagram.com/business.solutionsconsultores/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://x.com/SoBusiness2024"><i class="fa-brands fa-twitter"></i></i></a>
-                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/business-solutions-622953324/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
         <div class="botonVolver">
