--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <div class="contenedorFooter">
             <div class="copyR"> Copyright© </div>
             <div class="redes">
-                <a href=""> <i class="fa-brands fa-tiktok"></i></a>
+                <a href="https://www.tiktok.com/@business.solution44"> <i class="fa-brands fa-tiktok"></i></a>
                 <a href="https://www.instagram.com/business.solutionsconsultores/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://x.com/SoBusiness2024"><i class="fa-brands fa-twitter"></i></a>
-                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/business-solutions-622953324/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
     </footer>
