--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -13,7 +13,9 @@
 <body>
     <form action="enviar.php" method="post" enctype="application/x-www-form-urlencoded" class="formulario">
         <div class="contenedorForm">
-        <div class="logoRegistrarse"> </div>
+            <a href="../index.html">
+                <div class="logoRegistrarse"> </div>
+            </a>
         <h2>Contactanos!</h2>
         Nombre:<br><input type="text" required> <br>
         Empresa:<br><input type="text" required><br>
