--- a/index.html
+++ b/index.html
@@ -29,32 +29,32 @@
     </header>
     <div class="fondo1"> </div>
     <div class="tituloNoticias">
-        <h2>Nuestros clientes</h2>
+        <h2>Nuestras Especialidades</h2>
     </div>
     <div class="contenedorNoticias">
         <div class="noticia">
-            <h2> Parnor </h2>
-            <img src="./img/Parnor.png" alt="Parnor">
-            <div class="textoNoticia"><p>Asesoramos en calidad y estructura empresarial a la empresa dueña de las famosas "Pitusas"</p></div>
-            <a href="https://www.parnor.com.ar/">Más Info</a>
+            <h2> Alimentos </h2>
+            <img src="./img/cookiefactory.jpeg" alt="Parnor">
+            <div class="textoNoticia"><p>Nuestro mas destacado departamento, especializado en industria alimenticia</p></div>
+            <a href="./pages/Alimentos.html">Más Info</a>
         </div>
         <div class="noticia">
-            <h2> Granix </h2>
-            <img src="./img/GCDTL.jpg" alt="Granix">
-            <div class="textoNoticia"><p>Uno de nuestros mas destacados clientes quienes buscaron ganar terreno en ventas</p></div>
-            <a href="https://granix.com.ar/">Más Info</a>
+            <h2> Finanzas </h2>
+            <img src="./img/Finanzas.jpeg" alt="Granix">
+            <div class="textoNoticia"><p>Contamos con un departamento único para asesorar a las mas grandes financieras </p></div>
+            <a href="./pages/contactanos.html">Más Info</a>
         </div>
         <div class="noticia">
-            <h2> Muecas </h2>
-            <img src="./img/Muecas.webp" alt="Muecas">
-            <div class="textoNoticia"><p>Un sueño surgido de la noche a la mañana de la mano de Business Solutions </p></div>
-            <a href="https://www.muecas.com.ar/">Más Info</a>
+            <h2> Legales </h2>
+            <img src="./img/Legales.jpeg" alt="Muecas">
+            <div class="textoNoticia"><p>Nos encargamos de guiarte en cualquier tema legal que se te presente </p></div>
+            <a href="./pages/contactanos.html">Más Info</a>
         </div>
         <div class="noticia">
-            <h2> Don Satur </h2>
-            <img src="./img/DonSatur.png" alt="Don Satur">
-            <div class="textoNoticia"> <p> Tras sus problemas durante la pandemia, Don Satur nos contacto para buscar en conjunto una mejor estrategia operativa </p></div>
-            <a href="https://www.donsatur.com.ar/">Más Info</a>
+            <h2> Educacion </h2>
+            <img src="./img/Educacion.jpeg" alt="Don Satur">
+            <div class="textoNoticia"> <p> Asesoramos tu establecimiento educativo para obtener el maximo de las brillantes mentes del futuro </p></div>
+            <a href="./pages/contactanos.html">Más Info</a>
         </div>
     </div>
     <footer id="footer">
