--- a/pages/Alimentos.html
+++ b/pages/Alimentos.html
@@ -40,25 +40,25 @@
         <div class="contenedorNoticias">
             <div class="noticia">
                 <h2> Parnor </h2>
-                <img src="/img/Parnor.png" alt="Parnor">
+                <img src="../img/Parnor.png" alt="Parnor">
                 <div class="textoNoticia"><p>Asesoramos en calidad y estructura empresarial a la empresa dueña de las famosas "Pitusas"</p></div>
                 <a href="https://www.parnor.com.ar/">Más Info</a>
             </div>
             <div class="noticia">
                 <h2> Granix </h2>
-                <img src="/img/GCDTL.jpg" alt="Granix">
+                <img src="../img/GCDTL.jpg" alt="Granix">
                 <div class="textoNoticia"><p>Uno de nuestros mas destacados clientes quienes buscaron ganar terreno en ventas</p></div>
                 <a href="https://granix.com.ar/">Más Info</a>
             </div>
             <div class="noticia">
                 <h2> Muecas </h2>
-                <img src="/img/Muecas.webp" alt="Muecas">
+                <img src="../img/Muecas.webp" alt="Muecas">
                 <div class="textoNoticia"><p>Un sueño surgido de la noche a la mañana de la mano de Business Solutions </p></div>
                 <a href="https://www.muecas.com.ar/">Más Info</a>
             </div>
             <div class="noticia">
                 <h2> Don Satur </h2>
-                <img src="/img/DonSatur.png" alt="Don Satur">
+                <img src="../img/DonSatur.png" alt="Don Satur">
                 <div class="textoNoticia"> <p> Tras sus problemas durante la pandemia, Don Satur nos contacto para buscar en conjunto una mejor estrategia operativa </p></div>
                 <a href="https://www.donsatur.com.ar/">Más Info</a>
             </div>
