--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -39,7 +39,7 @@
         <h1 class="titulos"> Nuestra Misión </h1>
         <p class="texto-nosotros"> Proporcionar soluciones estratégicas e innovadoras que impulsen el crecimiento sostenible de nuestros clientes.</p>
         <h1 class="titulos"> Nuestra Visión </h1>
-        <p class="texto-nosotros"> Ser la consultora líder de Buenos Aires en el rubro alimenticio ofreciendo soluciones que resuelven los desafíos de nuestros clientes.</p>
+        <p class="texto-nosotros"> Ser la consultora líder de Argentina ofreciendo soluciones que resuelven los desafíos de nuestros clientes.</p>
     </div>
     <footer id="footer">
         <div class="contenedorFooter">
